fix: remove gap and align=items from .header, add 8px padding instead.

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -16,8 +16,6 @@ body {
   align-items: center;
   justify-content: space-between;
   gap: 16px;
-  align-items: center;
-  
 }
 
 .profile-image {
@@ -34,7 +32,6 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
-  margin: 8px;
 }
 
 button {
@@ -54,5 +51,11 @@ a {
 ul {
   list-style-type: none;
   display: flex;
+  gap: 16px;
+}
+
+.logo, .links, .notifcations, .profile-image {
+  display: flex;
+  align-items: center;
   gap: 16px;
 }
